--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "hono": "^4.6.10"
+    "@mozilla/readability": "^0.5.0",
+    "hono": "^4.6.10",
+    "linkedom": "^0.18.5",
+    "openai": "^4.72.0",
+    "podcast": "^2.0.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241112.0",
